--- a/static/assets/extra.css
+++ b/static/assets/extra.css
@@ -1,3 +1,16 @@
 .form-label {
     margin: 0;
 }
+
+.custom_btn_logout {
+    background-color: transparent;
+    border: none;
+    color: var(--azul-roxo);
+    font-family: var(--titulo);
+    font-weight: 500;
+    font-size: 18px;
+    text-transform: uppercase;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 21px;
+}
