--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
               <li><a href="{% url 'accounts:index' %}">Minha Conta</a></li>
               <form method="post" action="{% url 'accounts:logout' %}">
                 {% csrf_token %} 
-                <li><button type="submit">Sair</button></li>
+                <li><button type="submit" class="custom_btn_logout">Sair</button></li>
               </form>
             {% else %}
               <li><a href="{% url 'accounts:login' %}">Login</a></li>
