--- a/static/css/perfil/base.css
+++ b/static/css/perfil/base.css
@@ -1,17 +1,9 @@
-/* background */
-body{
-    width: 100%;
-    height: 500px;
-}
-/* tamanho da faixa listrada */
-img {
-    width: 100%;
-}
+
+
 /* estilo e posicionamento da janela azul */
 .left_menu {
-    max-width: 450px;
-    min-width: 350px;
-    height: 650px;
+    width: 350px;
+    min-height: 500px;
     margin-top: -3px; /* faixa listrada esta com pequeno espaçamento entre a janela azul, por isso essa margem negativa */
     background-color:var(--azul-escuro-light);
     border-radius: 0px 0px 70px 0px;
@@ -40,9 +32,7 @@ img {
 /* -------------------------------------- painel - pg administrador ---------------------*/
 /* Aplicando display grid na pagina e definindo quatro colunas, com três linhas;*/
 section {
-    margin: 0 auto;
     max-width: 100%;
-    height: fit-content;
     padding: 0px 50px 0px 0px;
 
     display: grid;
