--- a/medicos/templates/medicos/perfil.html
+++ b/medicos/templates/medicos/perfil.html
@@ -10,6 +10,52 @@
     Minha Conta | {{ block.super }}
 {% endblock%}
 
+{% block header %}
+
+<div class="nav navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a href="{% url 'index'%}" class="navbar-brand"><img src="{% static "img/logo/logo-vision-dark.svg" %}" class="logo" alt=""></a>
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <div class="navbar-collapse collapse" id="navbar-main">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="{% url 'clientes:consulta_create'%}"></a>
+          </li>
+          {% if user.is_staff or user.is_superuser %}
+          <li>
+            <a href="{% url 'medicos:agendar_consulta'%}"></a>
+          </li>
+          <li>
+            <a href="{% url 'medicos:medico_cadastro'%}"></a>
+          </li>
+          <li>
+            <a href="{% url 'medicos:especialidade_cadastro'%}"></a>
+          </li>
+          {% endif %}
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'accounts:index' %}">Minha Conta</a></li>
+            <form method="post" action="{% url 'accounts:logout' %}" class="navbar-form">
+              {% csrf_token %} 
+              <li><button type="submit" class="custom_btn_logout">Sair</button></li>
+            </form>
+          {% else %}
+            <li><a href="{% url 'accounts:login' %}">Login</a></li>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
+  </div>
+
+{% endblock header %}
+
 {% block content %}
 
 <section>
