--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
   {% block head %}{% endblock head %}
 </head>
 <body>
+  {% block header %}
     <div class="nav navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -55,6 +56,7 @@
         </div>
       </div>
     </div>
+    {% endblock header %}
 
     {% block content %}{% endblock content %}
 		{% block container %}{% endblock container %}
