--- a/medicos/templates/medicos/perfil.html
+++ b/medicos/templates/medicos/perfil.html
@@ -53,6 +53,7 @@
       </div>
     </div>
   </div>
+</div>
 
 {% endblock header %}
 
@@ -68,7 +69,7 @@
     </div>
 
     <div class="btn_main">
-    {% comment %} <a href="{% url '#' %}"> {% endcomment %}
+    <a href="{% url '#' %}"> {% endcomment %}
             <img src="{% static 'img/dashboard/icone_paciente.png' %}" alt="ícone ilustrativo paciente">
             <h1>PACIENTES</h1>  
         {% comment %} </a> {% endcomment %}
