--- a/static/css/perfil/base.css
+++ b/static/css/perfil/base.css
@@ -1,45 +1,12 @@
-
-
-/* estilo e posicionamento da janela azul */
-.left_menu {
-    width: 350px;
-    min-height: 500px;
-    margin-top: -3px; /* faixa listrada esta com pequeno espaçamento entre a janela azul, por isso essa margem negativa */
-    background-color:var(--azul-escuro-light);
-    border-radius: 0px 0px 70px 0px;
-    
-    grid-area: left_menu;
-    grid-row: left_menu;
-
-    /* alinhamento da janela azul */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-/* alinhamento dos elementos dentro da janela azul */
-.left_menu>div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-/* estilo do texto administrador(a) */
-.left_menu>div>h1 {
-    font-family: var(--titulo);
-    font-size: 20px;
-    font-weight: 700;
-}
-/* -------------------------------------- painel - pg administrador ---------------------*/
-/* Aplicando display grid na pagina e definindo quatro colunas, com três linhas;*/
 section {
     max-width: 100%;
-    padding: 0px 50px 0px 0px;
+    padding: 50px 50px 0px 0px;
 
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-template-rows: 15% auto auto;
     grid-template-areas: 
-    "left_menu subtitle subtitle subtitle "
+    "left_menu btn_main btn_main btn_main"
     "left_menu btn_main btn_main btn_main"
     "left_menu btn_main btn_main btn_main";
     grid-gap: 5%;
@@ -56,7 +23,36 @@ section {
     }
 }
 
-/* tamanho do icone adm */
+/* estilo e posicionamento da janela azul */
+.left_menu {
+    width: 350px;
+    min-height: 500px;
+    margin-top: -3px; /* faixa listrada esta com pequeno espaçamento entre a janela azul, por isso essa margem negativa */
+    background-color:var(--azul-escuro-light);
+    border-radius: 0px 0px 70px 0px;
+    
+    grid-area: left_menu;
+
+    /* alinhamento da janela azul */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/* alinhamento dos elementos dentro da janela azul */
+.left_menu>div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+/* estilo do texto - username*/
+.left_menu>div>h1 {
+    font-family: var(--titulo);
+    font-size: 20px;
+    font-weight: 700;
+}
+
+/* tamanho do icone */
 .left_menu>div>img {
     max-width: 226px;
     min-width: 160px;
@@ -77,26 +73,7 @@ section {
     font-weight: bold;
     box-sizing: border-box;
 }
-/* alterando cor e tamanho do menu suspenso */
-.left_menu select {
-    width: 200px;
-    background-color: var(--branco);
-}
-/* subtitulo "oq voce deseja acessar? */
-.subtitle {
-    font-family: var(--titulo);
-    font-weight: 600;
-    font-size: 20px;
-    text-decoration: none;
-    padding-top: 20px;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    grid-area: subtitle;
-    grid-column: subtitle;
-}
 /* tamanho dos quadrados dos botoes */
 .btn_main {
     max-width: 230px;
@@ -147,5 +124,8 @@ h1{
 a{
     text-decoration: none;
     /* color: var(--branco); */
+}
+.nav navbar navbar-default navbar-fixed-top {
+    grid-area: "header";
 }
 
