--- a/static/css/perfil/base.css
+++ b/static/css/perfil/base.css
@@ -1,16 +1,17 @@
 section {
     max-width: 100%;
-    padding: 50px 50px 0px 0px;
-
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: 15% auto auto;
-    grid-template-areas: 
-    "left_menu btn_main btn_main btn_main"
-    "left_menu btn_main btn_main btn_main"
-    "left_menu btn_main btn_main btn_main";
-    grid-gap: 5%;
+    display: flex;
+    flex-direction: row;
 }
+
+.flex-container {
+    width: 70%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
 /* responsividade max 980 a 800px - pg adm*/
 @media screen and (max-width: 980px) {
     .section {
@@ -25,7 +26,7 @@ section {
 
 /* estilo e posicionamento da janela azul */
 .left_menu {
-    width: 350px;
+    width: 30%;
     min-height: 500px;
     margin-top: -3px; /* faixa listrada esta com pequeno espaçamento entre a janela azul, por isso essa margem negativa */
     background-color:var(--azul-escuro-light);
@@ -76,14 +77,11 @@ section {
 
 /* tamanho dos quadrados dos botoes */
 .btn_main {
-    max-width: 230px;
-    min-width: 180px;
+    width: 230px;
     height: 230px;
     display: flex;
     align-items: center;
     justify-content: center;
-
-    grid-area: "btn_main";
 
     background-color: var(--branco);
     border-radius: 20px;
@@ -92,6 +90,7 @@ section {
     border-color: var(--preto);
     box-shadow: 0 4px 4px #666;
 }
+
 .btn_main a {
     display: flex;
     align-items: center;
@@ -108,18 +107,19 @@ section {
     height: 120px;
 }
 /* usado para centralizar o icone de agendamento que estava disproporcional */
-#centralize {
+/* #centralize {
     margin-left: 10px;
-}
+} */
 
 /* estilo do texto dentro dos botoes */
-h1{
+h1 {
     font-family: var(--titulo);
     color: var(--preto);
     font-weight:600;
-    /* padding-top: 20px; */
+    font-size: 29px;
     text-align: center;
 }
+
 /* retirando sublinhado do link */
 a{
     text-decoration: none;
