feature: adicionado template de listar consultas; ajustado algumas tags;

--- a/medicos/templates/medicos/perfil.html
+++ b/medicos/templates/medicos/perfil.html
@@ -8,7 +8,7 @@
 
 {% block title %}
     {{ block.super }}
-{% endblock%}
+{% endblock %}
 
 {% block header %}
 
@@ -44,6 +44,7 @@
 {% block content %}
 
 <section>
+
     <div class="left_menu">
         <div>
             <img src="{% static 'img/dashboard/perfil_icon/icone_03.png' %}" alt="ícone perfil">
@@ -52,47 +53,33 @@
         </div>
     </div>
 
-    <div class="btn_main">
-    {% comment %} <a href="{% url '#' %}"> {% endcomment %}
-            <img src="{% static 'img/dashboard/icone_paciente.png' %}" alt="ícone ilustrativo paciente">
-            <h1>PACIENTES</h1>  
-        {% comment %} </a> {% endcomment %}
-    </div>
+    <div class="flex-container">
 
-    <div class="btn_main">
-    {% comment %} <a href="{% url '#' %}"> {% endcomment %}
-            <img id="centralize" src="{% static 'img/dashboard/img-calendario-med.png' %}" alt="ícone ilustrativo img-calendario-med">
-            <h1>MINHA AGENDA</h1>
-        {% comment %} </a> {% endcomment %}
-    </div>
+      <div class="btn_main">
+      {% comment %} <a href="{% url '#' %}"> {% endcomment %}
+              <img src="{% static 'img/dashboard/icone_paciente.png' %}" alt="ícone ilustrativo paciente">
+              <h1>PACIENTES</h1>  
+          {% comment %} </a> {% endcomment %}
+      </div>
 
-    <div class="btn_main">
-        <a href='{% url 'medicos:atualizar_cadastro' medico.pk %}'>
-            <img src="{% static 'img/dashboard/perfil_icon/icone_03.png' %}" alt="ícone perfil medico">
-            <h1>MEUS DADOS</h1>
-        </a> 
-    </div> 
+      <div class="btn_main">
+      <a href="{% url 'medicos:listar_consultas' medico.pk %}">
+              <img id="centralize" src="{% static 'img/dashboard/img-calendario-med.png' %}" alt="ícone ilustrativo img-calendario-med">
+              <h1>MINHA AGENDA</h1>
+          </a>
+      </div>
+
+      <div class="btn_main">
+          <a href='{% url 'medicos:atualizar_cadastro' medico.pk %}'>
+              <img src="{% static 'img/dashboard/perfil_icon/icone_03.png' %}" alt="ícone perfil medico">
+              <h1>MEUS DADOS</h1>
+          </a> 
+      </div> 
+  </div>
+  
 </section>
 
 {% endblock content %}
 
 {% block footer %}
-{% comment %} <footer class="titulo">
-<div>
-    <section>
-        <img src="{% static "img/logo/logo-vision-dark.svg" %}" alt="">
-    </section>
-    <section>
-        <p>&copy; 2024 Company, Inc</p>
-        <a href=""><img src="{% static "img/logo/logo-dev-team.png" %}" alt=""></a>
-    </section>
-    <section>
-        <nav>
-            <a href="#"><img src="{% static "img/icons/instagram.png" %}" alt=""></a>
-            <a href="#"><img src="{% static "img/icons/facebook.svg" %}" alt=""></a>
-            <a href="#"><img src="{% static "img/icons/linkedin.png" %}" alt=""></a>
-        </nav>
-    </section>
-</div>
-</footer> {% endcomment %}
 {% endblock footer %}
