--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,6 +9,7 @@ Login | {{ block.super }}
 {% block head %}
 		<link rel="stylesheet" href="{% static "css/login/login.css" %}">
 		<link rel="stylesheet" href="{% static "css/formulario/form.css" %}">
+		<link rel="stylesheet" href="{% static "scss/button-submit.scss" %}">
 {% endblock head %}
 
 {% block login-header %}
@@ -21,7 +22,7 @@ Login | {{ block.super }}
 		</div>
 {% endblock login-header %}
 
-{% block content %}
+{% block container %}
 		<main>
 				<section class="bem-vindo__container">
 						<div class="bg-bem-vindo"></div> <!-- Esta div é o fundo branco emcima do bg -->
@@ -76,7 +77,7 @@ Login | {{ block.super }}
 												</div>
 												<div class="form-group">
 														<div class="col-md-9 col-md-offset-3">
-																<button type="submit" class="form-button">ENTRAR</button>
+																<button type="submit" id="button-submit" class="form-button">ENTRAR</button>
 														</div>
 												</div>
 								</form>
@@ -94,4 +95,9 @@ Login | {{ block.super }}
 						</div>
 				</section>
 		</main>
-{% endblock content %}
+{% endblock container %}
+
+{% block scripts %}
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="{% static "js/button-submit.js" %}"></script>
+{% endblock scripts %}
