--- a/accounts/templates/accounts/update_password.html
+++ b/accounts/templates/accounts/update_password.html
@@ -1,5 +1,5 @@
-{% extends "accounts/index.html" %}
-
+{% extends "base_dash.html" %}
+{% load static %}
 {% load widget_tweaks %}
 
 {% block title %} Alterar Senha {% endblock %}
