--- a/static/css/dashboard/base_dash.css
+++ b/static/css/dashboard/base_dash.css
@@ -1,29 +1,36 @@
 /* background */
-body{
-    width: 100%;
-    height: 500px;
+main {
+    display: flex;
+    margin-top: 50px;
 }
+
+
 /* tamanho da faixa listrada */
 img {
     width: 100%;
 }
+
 /* estilo e posicionamento da janela azul */
 .left_menu {
-    max-width: 450px;
-    min-width: 350px;
-    height: 650px;
-    margin-top: -3px; /* faixa listrada esta com pequeno espaçamento entre a janela azul, por isso essa margem negativa */
-    background-color:var(--azul-escuro-light);
+    max-width: 300px;
+    min-width: 250px;
+    height: 500px;
+    margin: 0 2rem 4rem 0;
+    /* faixa listrada esta com pequeno espaçamento entre a janela azul, por isso essa margem negativa */
+    background-color: var(--azul-medio);
     border-radius: 0px 0px 70px 0px;
-    
     grid-area: left_menu;
     grid-row: left_menu;
-
+    
     /* alinhamento da janela azul */
     display: flex;
     align-items: center;
+    width: 20%;
+    flex-grow: 1;
+    /* height: 300px; */
     justify-content: center;
 }
+
 /* alinhamento dos elementos dentro da janela azul */
 .left_menu>div {
     display: flex;
@@ -31,131 +38,128 @@ img {
     align-items: center;
     text-align: center;
 }
+
 /* estilo do texto administrador(a) */
 .left_menu>div>h1 {
     font-family: var(--titulo);
     font-size: 20px;
     font-weight: 700;
+    line-height: 30px;
 }
+
 /* -------------------------------------- painel - pg administrador ---------------------*/
 /* Aplicando display grid na pagina e definindo quatro colunas, com três linhas;*/
-section {
-    margin: 0 auto;
-    max-width: 100%;
-    height: fit-content;
-    padding: 0px 50px 0px 0px;
-
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: 15% auto auto;
-    grid-template-areas: 
-    "left_menu subtitle subtitle subtitle "
-    "left_menu btn_main btn_main btn_main"
-    "left_menu btn_main btn_main btn_main";
-    grid-gap: 5%;
+.right_menu {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 3;
+    /* width: 100%; */
 }
+
 /* responsividade max 980 a 800px - pg adm*/
 @media screen and (max-width: 980px) {
-    .section {
-        grid-template-columns: auto auto auto;
-        grid-template-areas: 
-        "left_menu subtitle subtitle"
-        "left_menu btn_main btn_main"
-        "left_menu btn_main btn_main";
-        grid-gap: 0px 30px;
-    }
+
 }
 
 /* tamanho do icone adm */
 .left_menu>div>img {
-    max-width: 226px;
-    min-width: 160px;
-    height: 226px;
+    max-width: 150px;
+    min-width: 100px;
+    height: 150px;
     padding-bottom: 20px;
+    filter: invert(1);
 }
+
 /* estilo do botao a esquerda - novo usuario */
 .left_menu>div>div {
-    width: 250px;
     font-family: var(--titulo);
     font-size: 20px;
-    color: var(--azul-escuro);
-    padding: 10px 20px 10px 20px;
-    border-radius: 20px;
-    background-color: var(--branco);
-    border: none;
-    margin-top: 30px;
-    font-weight: bold;
-    box-sizing: border-box;
+    /* color: var(--azul-escuro); */
+    /* padding: 10px 20px 10px 20px; */
+    /* border-radius: 20px; */
+    /* background-color: var(--branco); */
+    /* border: none; */
+    margin: 1rem;
+    width: auto;
+    /* font-weight: normal; */
+    /* box-sizing: border-box; */
 }
+
 /* alterando cor e tamanho do menu suspenso */
 .left_menu select {
     width: 200px;
     background-color: var(--branco);
 }
+
 /* subtitulo "oq voce deseja acessar? */
-.subtitle {
-    font-family: var(--titulo);
-    font-weight: 600;
-    font-size: 20px;
-    text-decoration: none;
-    padding-top: 20px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    grid-area: subtitle;
-    grid-column: subtitle;
+.titulo {
+    font-size: 24px;
+    margin: 3rem;
+    text-align: -webkit-center;
 }
+
+.botoes {
+    display: flex;
+    margin: 20px;
+    flex-wrap: wrap;
+    text-transform: uppercase;
+    /* width: 100%; */
+    height: 100%;
+    /* padding: 2rem; */
+}
+
 /* tamanho dos quadrados dos botoes */
 .btn_main {
-    max-width: 230px;
-    min-width: 180px;
-    height: 230px;
+    max-width: 150px;
+    min-width: 150px;
+    height: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
-
     grid-area: "btn_main";
-
     background-color: var(--branco);
     border-radius: 20px;
     border: 2px solid;
-    margin-top: -20px;
+    margin: 1rem;
     border-color: var(--preto);
     box-shadow: 0 4px 4px #666;
 }
+
 .btn_main a {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
-.btn_main:hover{
+
+.btn_main:hover {
     transform: scale(1.05);
     transition: 0.5s;
 }
+
 /* tamanho dos icones dos botoes */
 .btn_main img {
-    width: 120px;
-    height: 120px;
+    width: 60px;
+    height: 60px;
 }
+
 /* usado para centralizar o icone de agendamento que estava disproporcional */
 #centralize {
     margin-left: 10px;
 }
 
 /* estilo do texto dentro dos botoes */
-h1{
+h2 {
     font-family: var(--titulo);
     color: var(--preto);
-    font-weight:600;
+    font-weight: normal;
     /* padding-top: 20px; */
     text-align: center;
+    font-size: 14px;
 }
+
 /* retirando sublinhado do link */
-a{
+a {
     text-decoration: none;
     /* color: var(--branco); */
 }
-
