--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<title>{% block title %} Clinica Vision {% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />  <!-- Outros elementos do head, como meta tags, título, etc. -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}"media="screen" />
 	<link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
 	<link rel="stylesheet" href="{% static 'assets/extra.css' %}" media="screen" />
@@ -17,7 +18,7 @@
     <div class="nav navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="{% url 'index'%}" class="navbar-brand"><img src="{% static "img/logo/logo-vision-dark.svg" %}" class="logo" alt=""></a>
+          <a href="{% url 'home'%}" class="navbar-brand"><img src="{% static "img/logo/logo-vision-dark.svg" %}" class="logo" alt=""></a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -53,8 +54,8 @@
       </div>
     </div>
 
-    {% block content %}{% endblock content %}
 		{% block container %}{% endblock container %}
+    {% block content %}{% endblock content %}
 
     <div class="container margin-top">
       {% block messages %}
@@ -77,7 +78,7 @@
 
 {% block footer %}
     <!-- Aqui começa o rodapé -->
-    <footer class="titulo">
+    <footer>
         <div>
             <section>
                 <p>
@@ -123,6 +124,6 @@
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="https://kit.fontawesome.com/c2a3297ec9.js" crossorigin="anonymous"></script>
   <script src="{% static 'assets/bootstrap.min.js'%}"></script>
-{% block scripts %}{% endblock %}
+{% block scripts %}{% endblock scripts %}
 </body>
 </html>
