--- a/templates/index.html
+++ b/templates/index.html
@@ -144,3 +144,5 @@
     </section>
     {% endblock history %}
 {% endblock content %}
+
+{% block scripts %}<script src="https://kit.fontawesome.com/c2a3297ec9.js" crossorigin="anonymous"></script>{% endblock scripts %}
