--- a/static/css/perfil/medico/minha_agenda.css
+++ b/static/css/perfil/medico/minha_agenda.css
@@ -3,21 +3,51 @@ section {
     height: 100vh;
     display: flex;
     flex-direction: column;
+}
+/* estilo e posição titulo */
+.container_title {
+    margin-top: 8%;
+    display: flex;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;   
 }
 
-.container_title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
+.container_title h1 {
+    font-family: var(--titulo);
+    font-size: 30px;
 }
+/* estilo e posição do filtro de consultas */
+.container_title div {
+    position: absolute;
+    right: 10%;
+}
+
+.container_title input, button {
+    height: 40px;
+    border: none;
+    margin-right: 10px;
+    border-radius: 10px;
+}
+
+.container_title input{
+    padding: 0 10px;
+}
+
+.container_title button {
+    width: 100px;
+    background-color: var(--verde);
+    font-family: var(--texto);
+    font-weight: 600;
+    color: var(--branco);
+}
+
 /* Estilização da lista de consultas */
 .container_historico {
     width: 100%;
     min-height: 400px;
     max-height: auto;
-    padding-bottom: 30px;
+    padding: 30px 0;
 
     display: flex;
     align-items: center;
@@ -27,7 +57,6 @@ section {
 
 .consulta-item {
     width: 80%;
-    /* height: 100px; */
     padding: 10px; /* Ajustado para garantir espaço interno */
 
     border-radius: 10px;
@@ -44,6 +73,7 @@ section {
     font-family: var(--texto);
     font-weight: 600;
     line-height: 2;
+    margin: none !important;
 }
 
 /* Background do listar consulta */
