--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -76,7 +76,9 @@ Login | {{ block.super }}
 												</div>
 												<div class="form-group">
 														<div class="col-md-9 col-md-offset-3">
-																<button type="submit" class="form-button">ENTRAR</button>
+															<div class="form-button">
+																<button type="submit">ENTRAR</button>
+															</div>
 														</div>
 												</div>
 								</form>
