--- a/static/css/formulario/form.css
+++ b/static/css/formulario/form.css
@@ -1,7 +1,14 @@
+section {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
 .perfil-cadastro {
     width: 40%;
+    height: 195px;
     background-color: var(--azul-claro);
-    border-radius: 0 0 90px 0;
+    border-radius: 0 90px 90px 0;
 
     display: flex;
     flex-direction: row-reverse;
@@ -21,58 +28,52 @@
 #container-forms {
     max-width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--bg);
+    justify-content: center;
 }
 
 .form-grid {
-    max-width: 80%;
+    max-width: 60%;
     margin-top: 5rem;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas:
-        "input input"
-        "input input"
-        "input input"
-        "input input"
-        "input input"
-        "input input"
-        "input input"
-        "input input"
-        "button button";
-    gap: 10px;
+    display: flex;
+    flex-flow: row wrap;
 }
-
+    
 .form-field {
-    margin-bottom: 10px;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
 }
 
 .form-label {
+    margin-bottom: -15px;
     font-family: var(--texto);
-    /* font-weight: bold; */
-    padding: 0 0 0 1.2rem;
+    text-transform: uppercase;
 }
 
 .form-button {
+    flex-basis: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.form-button button {
     background-color: var(--verde);
     border-radius: 20px;
     border: none;
     color: var(--branco);
     font-family: var(--titulo);
-    font-size: 20px;
     font-weight: 600;
     height: 40px;
-    width: 140px;
+    width: 500px;
     margin: 1rem;
-
-    grid-area: button;
 }
 
 .input-estilizado {
     height: 40px;
     border-radius: 10px;
     border: none;
+    padding-left: 1rem;
     background-color: var(--azul-claro);
 }
 
