feature: adicionado view de historico de pacientes, url e templates

--- a/medicos/templates/medicos/perfil.html
+++ b/medicos/templates/medicos/perfil.html
@@ -56,10 +56,10 @@
     <div class="flex-container">
 
       <div class="btn_main">
-      {% comment %} <a href="{% url '#' %}"> {% endcomment %}
+      <a href="{% url 'medicos:historico_pacientes' %}">
               <img src="{% static 'img/dashboard/icone_paciente.png' %}" alt="ícone ilustrativo paciente">
               <h1>PACIENTES</h1>  
-          {% comment %} </a> {% endcomment %}
+          </a>
       </div>
 
       <div class="btn_main">
