--- a/medicos/templates/medicos/historico_pacientes.html
+++ b/medicos/templates/medicos/historico_pacientes.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/perfil/medico/listar_consultas.css' %}">
+    <link rel="stylesheet" href="{% static 'css/medico/perfil/listar_consultas.css' %}">
 {% endblock head %}
 
 {% block title %}
@@ -14,8 +14,18 @@
 
 <section>
 
-    <div class="container_title">
-        <h1 class="subtitle">PACIENTES</h1>
+    <div class="container_title_historico">
+        <div>
+            <img src="{% static 'img/dashboard/perfil_icon/icone_01.png' %}" alt="perfil">
+            <h1 class="texto">PACIENTES</h1>
+        </div>
+        <div>
+            <select id="tipo_select" onchange="changePlaceholder()">
+                <option value="nome">Nome</option>
+                <option value="cpf">CPF</option>
+            </select>
+            <input id="tipo_input" placeholder="Selecione">
+        </div>
         <div>
             <form method="GET">
                 <input type="date" name="data_consulta">
@@ -24,7 +34,7 @@
         </div>
     </div>
 
-    <div class="container_historico">
+    <div class="container_consultas">
         {% if user.is_staff or user.is_superuser %}
             {% if consultas %}
                 {% for consulta in consultas %}                 
@@ -55,3 +65,6 @@
 </section>
 
 {% endblock content %}
+{% block scripts %}
+    <script src="{% static 'js/filtro_paciente.js' %}"></script>
+{% endblock %}
