docs: alterado nome do arquivo para melhor entendimento

--- a/medicos/templates/medicos/prontuario_pacientes.html
+++ b/medicos/templates/medicos/prontuario_pacientes.html
@@ -17,7 +17,7 @@
     <div class="container_title_historico">
         <div>
             <img src="{% static 'img/dashboard/perfil_icon/icone_01.png' %}" alt="perfil">
-            <h1 class="texto">PACIENTES</h1>
+            <h1 class="texto">PRONTUÁRIOS</h1>
         </div>
         <div>
             <select id="tipo_select" onchange="changePlaceholder()">
