--- a/medicos/templates/medicos/perfil.html
+++ b/medicos/templates/medicos/perfil.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/perfil/base.css' %}" media="screen" />
+    <link rel="stylesheet" href="{% static 'css/medico/perfil/base.css' %}" media="screen" />
 {% endblock head %}
 
 {% block title %}
@@ -15,7 +15,7 @@
 <div class="nav navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a href="{% url 'index' %}" class="navbar-brand"><img src="{% static "img/logo/logo-vision-dark.svg" %}" class="logo" alt=""></a>
+        <a href="{% url 'medicos:medico_perfil' %}" class="navbar-brand"><img src="{% static "img/logo/logo-vision-dark.svg" %}" class="logo" alt=""></a>
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -56,9 +56,9 @@
     <div class="flex-container">
 
       <div class="btn_main">
-      <a href="{% url 'medicos:historico_pacientes' %}">
+      <a href="{% url 'medicos:prontuario_pacientes' %}">
               <img src="{% static 'img/dashboard/icone_paciente.png' %}" alt="ícone ilustrativo paciente">
-              <h1>PACIENTES</h1>  
+              <h1>PRONTUÁRIOS</h1>  
           </a>
       </div>
 
