--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -32,7 +32,16 @@ Login | {{ block.super }}
 						</div>
 				</section>
 				<section class="login__container"> <!-- Essa section é toda a parte da direita -->
-						<div class="login__links">
+					<div class="container margin-top">
+						{% block messages %}
+							{% for message in messages %}
+								<div class='alert alert-{{ message.tags}}'>
+								{{ message }}
+								</div>
+							{% endfor %}
+						{% endblock messages %}
+					</div>
+						{% comment %} <div class="login__links">
 								<h1>LOGIN</h1>
 								<nav>
 										<div class="login__facebook texto__padrao">
@@ -48,9 +57,9 @@ Login | {{ block.super }}
 														<img src="{% static "img/icons/google.png" %}" alt="">Continuar com Google</a>
 										</div>
 								</nav>
-						</div>
+						</div> {% endcomment %}
 						<div class="login">
-								<span class="titulo__padrao">Ou</span>
+								{% comment %} <span class="titulo__padrao">Ou</span> {% endcomment %}
 								<form class="form-horizontal" method="post">
 										{% csrf_token %}
 												<div class="form-group {% if form.username.errors %} has-error {% endif %}">
