--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
 		{% block container %}{% endblock container %}
     {% block content %}{% endblock content %}
 
-    <div class="container margin-top">
+    {% comment %} <div class="container margin-top">
       {% block messages %}
         {% for message in messages %}
           <div class='alert alert-{{ message.tags}}'>
@@ -69,15 +69,15 @@
         {% endfor %}
       {% endblock messages %} 
     
-    {% comment %} <div class="row">
+    <div class="row">
       <div class="col-lg-12">
         <ul class="list-unstyled">
           <li class="pull-right"><a href="#top">Voltar ao Topo</a></li>
         </ul>
       </div>
-    </div> {% endcomment %}
+    </div>
   </div>
-</div>
+</div> {% endcomment %}
 
 {% block footer %}
     <!-- Aqui começa o rodapé -->
