--- a/static/css/formulario/form.css
+++ b/static/css/formulario/form.css
@@ -1,10 +1,13 @@
 section {
+    width: 100%;
+    height: 100vh;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
 }
 
 .perfil-cadastro {
+    margin-top: 8%;
     width: 40%;
     height: 195px;
     background-color: var(--azul-claro);
