feature: Coloquei botão de voltar no header.

--- a/static/css/dashboard/base_dash.css
+++ b/static/css/dashboard/base_dash.css
@@ -94,7 +94,7 @@ img {
 /* subtitulo "oq voce deseja acessar? */
 .titulo {
     font-size: 24px;
-    margin: 3rem;
+    margin: 5rem 1rem 1rem;
     text-align: -webkit-center;
 }
 
