--- a/medicos/templates/medicos/atualizar_dados.html
+++ b/medicos/templates/medicos/atualizar_dados.html
@@ -16,7 +16,7 @@
 <section>
 
     <div class="perfil-cadastro">
-        <a href="{% url 'medicos:medico_perfil' %}"><img src="{% static 'img/dashboard/perfil_icon/icone_01.png' %}" alt="perfil"></a>
+        <img src="{% static 'img/dashboard/perfil_icon/icone_01.png' %}" alt="perfil">
         {% if user.is_superuser %}
             <h1 class="titulo">{{ funcionario.pk }}</h1>    
         {% else %}
@@ -26,21 +26,29 @@
 
     <div id="container-forms">
 
-        <form method="POST" class="form-grid">
+        <form method="POST" class="form-grid" novalidate>
 
-            {% csrf_token %}
-            {% for field in form %}
+        {% csrf_token %}
+        {{ form.non_field_errors }}
+        {% for field in form %}
+            {% if field.name != 'genero' %}
                 <div class="form-field">
                     <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label><br>
-                    {{ field }}
+                    {{ field }} {{ field.errors }}
                 </div>
-            {% endfor %}
+            {% else %} 
+            {% comment %} adicionado regra para desabilitar o select do genero {% endcomment %}
+                <div class="form-field">
+                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label><br>
+                    <input type="text" value="{{ field.value }}" class="input-estilizado" readonly>
+                </div>
+            {% endif %}
+        {% endfor %}
             <div class="form-button">
                 <div>
                     <button type="submit">CONCLUIR</button>
                 </div>
             </div>
-
         </form>
 
     </div>
