--- a/templates/base_dash.html
+++ b/templates/base_dash.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Minha Conta | {{ block.super }}
+    {{ block.super }} | Minha Conta
 {% endblock%}
 
 {% block head %}
