fix: solucionado conflitos de css

--- a/medicos/templates/medicos/perfil.html
+++ b/medicos/templates/medicos/perfil.html
@@ -1,85 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'accounts/dashboard.html' %}
 
 {% load static %}
 
-{% block head %}
-    <link rel="stylesheet" href="{% static 'css/medico/perfil/base.css' %}" media="screen" />
-{% endblock head %}
 
-{% block title %}
-    {{ block.super }}
-{% endblock %}
-
-{% block header %}
-
-<div class="nav navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <a href="{% url 'medicos:medico_perfil' %}" class="navbar-brand"><img src="{% static "img/logo/logo-vision-dark.svg" %}" class="logo" alt=""></a>
-        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <div class="navbar-collapse collapse" id="navbar-main">
-        <ul class="nav navbar-nav navbar-right">
-          {% if user.is_authenticated %}
-            <li><a href="{% url 'accounts:index' %}">Minha Conta</a></li>
-            <form method="post" action="{% url 'accounts:logout' %}" class="navbar-form">
-              {% csrf_token %} 
-              <li><button type="submit" class="custom_btn_logout">Sair</button></li>
-            </form>
-          {% else %}
-            <li><a href="{% url 'accounts:login' %}">Login</a></li>
-          {% endif %}
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-{% endblock header %}
-
-{% block content %}
-
-<section>
-
-    <div class="left_menu">
-        <div>
-            <img src="{% static 'img/dashboard/perfil_icon/icone_03.png' %}" alt="ícone perfil">
-
-            <h1> Dr(a) {{ medico.user }} </h1>
-        </div>
-    </div>
-
-    <div class="flex-container">
-
-      <div class="btn_main">
-      <a href="{% url 'medicos:prontuario_pacientes' %}">
-              <img src="{% static 'img/dashboard/icone_paciente.png' %}" alt="ícone ilustrativo paciente">
-              <h1>PRONTUÁRIOS</h1>  
-          </a>
-      </div>
-
-      <div class="btn_main">
-      <a href="{% url 'medicos:listar_consultas' %}">
-              <img id="centralize" src="{% static 'img/dashboard/img-calendario-med.png' %}" alt="ícone ilustrativo img-calendario-med">
-              <h1>MINHA AGENDA</h1>
-          </a>
-      </div>
-
-      <div class="btn_main">
-          <a href='{% url 'medicos:atualizar_cadastro' %}'>
-              <img src="{% static 'img/dashboard/perfil_icon/icone_03.png' %}" alt="ícone perfil medico">
-              <h1>MEUS DADOS</h1>
-          </a> 
-      </div> 
-  </div>
-  
-</section>
-
-{% endblock content %}
-
-{% block footer %}
-{% endblock footer %}
