--- a/static/css/dashboard/base_dash.css
+++ b/static/css/dashboard/base_dash.css
@@ -1,38 +1,3 @@
-<<<<<<<< HEAD:static/css/medico/perfil/base.css
-section {
-    max-width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-}
-
-.flex-container {
-    width: 70%;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: center;
-}
-
-/* responsividade max 980 a 800px - pg adm*/
-@media screen and (max-width: 980px) {
-    .section {
-        grid-template-columns: auto auto auto;
-        grid-template-areas: 
-        "left_menu subtitle subtitle"
-        "left_menu btn_main btn_main"
-        "left_menu btn_main btn_main";
-        grid-gap: 0px 30px;
-    }
-}
-
-/* estilo e posicionamento da janela azul */
-.left_menu {
-    width: 30%;
-    min-height: auto;
-    margin-top: -3px; /* faixa listrada esta com pequeno espaçamento entre a janela azul, por isso essa margem negativa */
-    background-color:var(--azul-escuro-light);
-========
 /* background */
 main {
     display: flex;
@@ -53,15 +18,10 @@ img {
     margin: 0 2rem 4rem 0;
     /* faixa listrada esta com pequeno espaçamento entre a janela azul, por isso essa margem negativa */
     background-color: var(--azul-medio);
->>>>>>>> d49a87628a74f9d564401cf5d34e2d9ce00a23d4:static/css/dashboard/base_dash.css
     border-radius: 0px 0px 70px 0px;
     grid-area: left_menu;
-<<<<<<<< HEAD:static/css/medico/perfil/base.css
-
-========
     grid-row: left_menu;
     
->>>>>>>> d49a87628a74f9d564401cf5d34e2d9ce00a23d4:static/css/dashboard/base_dash.css
     /* alinhamento da janela azul */
     display: flex;
     align-items: center;
@@ -78,12 +38,8 @@ img {
     align-items: center;
     text-align: center;
 }
-<<<<<<<< HEAD:static/css/medico/perfil/base.css
-/* estilo do texto - username*/
-========
 
 /* estilo do texto administrador(a) */
->>>>>>>> d49a87628a74f9d564401cf5d34e2d9ce00a23d4:static/css/dashboard/base_dash.css
 .left_menu>div>h1 {
     font-family: var(--titulo);
     font-size: 20px;
@@ -91,9 +47,6 @@ img {
     line-height: 30px;
 }
 
-<<<<<<<< HEAD:static/css/medico/perfil/base.css
-/* tamanho do icone */
-========
 /* -------------------------------------- painel - pg administrador ---------------------*/
 /* Aplicando display grid na pagina e definindo quatro colunas, com três linhas;*/
 .right_menu {
@@ -109,7 +62,6 @@ img {
 }
 
 /* tamanho do icone adm */
->>>>>>>> d49a87628a74f9d564401cf5d34e2d9ce00a23d4:static/css/dashboard/base_dash.css
 .left_menu>div>img {
     max-width: 150px;
     min-width: 100px;
@@ -133,16 +85,6 @@ img {
     /* box-sizing: border-box; */
 }
 
-<<<<<<<< HEAD:static/css/medico/perfil/base.css
-/* tamanho dos quadrados dos botoes */
-.btn_main {
-    width: 230px;
-    height: 230px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-========
 /* alterando cor e tamanho do menu suspenso */
 .left_menu select {
     width: 200px;
@@ -175,7 +117,6 @@ img {
     align-items: center;
     justify-content: center;
     grid-area: "btn_main";
->>>>>>>> d49a87628a74f9d564401cf5d34e2d9ce00a23d4:static/css/dashboard/base_dash.css
     background-color: var(--branco);
     border-radius: 20px;
     border: 2px solid;
@@ -203,25 +144,11 @@ img {
 }
 
 /* usado para centralizar o icone de agendamento que estava disproporcional */
-/* #centralize {
+#centralize {
     margin-left: 10px;
-} */
-
-/* estilo do texto dentro dos botoes */
-<<<<<<<< HEAD:static/css/medico/perfil/base.css
-h1 {
-    font-family: var(--titulo);
-    color: var(--preto);
-    font-weight: 600;
-    font-size: 25px;
-    text-align: center;
 }
 
-/* retirando sublinhado do link */
-a{
-    text-decoration: none;
-    /* color: var(--branco); */
-========
+/* estilo do texto dentro dos botoes */
 h2 {
     font-family: var(--titulo);
     color: var(--preto);
@@ -229,10 +156,6 @@ h2 {
     /* padding-top: 20px; */
     text-align: center;
     font-size: 14px;
->>>>>>>> d49a87628a74f9d564401cf5d34e2d9ce00a23d4:static/css/dashboard/base_dash.css
-}
-.nav navbar navbar-default navbar-fixed-top {
-    grid-area: "header";
 }
 
 /* retirando sublinhado do link */
