fix: ajustado template

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -56,7 +56,7 @@
 {% endblock container %}
 
 {% block scripts %}
-  <script src="{% static "js/button-submit.js" %}"></script>r
+  <script src="{% static "js/button-submit.js" %}"></script>
 {% endblock scripts %}
 
 
