models: Modifiquei regex de telefone. style: Ajustando templates de medico, especialidades e agenda do perfil admin. feature: Acrescentei link para adicionar novo médico, nova especialidade e novo agendamento.

--- a/templates/medicos/cadastro.html
+++ b/templates/medicos/cadastro.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% load widget_tweaks %}
+
+{% block head %}
+  <link rel="stylesheet" href="{% static "css/formulario/form.css" %}">
+{% endblock head %}
+
+
 
 {% block title %}
     Cadastro | {{ block.super }}
