--- a/static/css/dashboard/base_dash.css
+++ b/static/css/dashboard/base_dash.css
@@ -15,7 +15,7 @@ img {
     max-width: 300px;
     min-width: 250px;
     height: 500px;
-    margin: 0 2rem 4rem 0;
+    margin: 0 5rem 4rem 0;
     /* faixa listrada esta com pequeno espaçamento entre a janela azul, por isso essa margem negativa */
     background-color: var(--azul-medio);
     border-radius: 0px 0px 70px 0px;
@@ -45,6 +45,7 @@ img {
     font-size: 20px;
     font-weight: 700;
     line-height: 30px;
+    color: var(--branco);
 }
 
 /* -------------------------------------- painel - pg administrador ---------------------*/
