--- a/templates/medicos/agenda_list.html
+++ b/templates/medicos/agenda_list.html
@@ -1,11 +1,21 @@
 {% extends "base_dash.html" %}
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static "css/formulario/list.css" %}">
+    <link rel="stylesheet" href="{% static "css/dashboard/base_dash.css" %}">
+{% endblock head %}
 
 {% block title %}
     Agendas
 {% endblock %}
 
 {% block accounts_container %}
-<h2>Agendas Disponiveis</h2>
+<div class="content">
+    <div>
+        <h2 class="titulo__padrao">Agendas Disponíveis</h2>
+        <a href="{% url "medicos:agendar_consulta" %}">+ NOVO AGENDAMENTO</a>
+    </div>
 <table class="table table-bordered">
     <thead>
         <tr>
@@ -53,4 +63,5 @@
         {% endfor %}
     </tbody>
 </table>
+</div>
 {% endblock %}
