--- a/templates/medicos/medicos_list.html
+++ b/templates/medicos/medicos_list.html
@@ -1,17 +1,21 @@
 {% extends "base_dash.html" %}
 {% load static %}
 
+{% block head %}
+    <link rel="stylesheet" href="{% static "css/formulario/list.css" %}">
+    <link rel="stylesheet" href="{% static "css/dashboard/base_dash.css" %}">
+{% endblock head %}
+
 {% block title %}
     Medicos
 {% endblock %}
 
-{% comment %} {% block head %}
-    <link rel="stylesheet" href="{% static "css/medicos/medicos_list.css" %}">
-{% endblock head %} {% endcomment %}
-
 {% block accounts_container %}
-<div>
-    <h2 class="titulo">Médicos</h2>
+<div class="content">
+    <div>
+        <h2 class="titulo__padrao">Médicos</h2>
+        <a href="{% url "medicos:medico_cadastro" %}">+ CADASTRAR NOVO MÉDICO</a>
+    </div>
 <table class="table table-bordered">
     <thead>
         <tr>
