--- a/medicos/templates/medicos/minha_agenda.html
+++ b/medicos/templates/medicos/minha_agenda.html
@@ -2,27 +2,30 @@
 
 {% load static %}
 
-{% block head %}
-    <link rel="stylesheet" href="{% static 'css/medico/perfil/listar_consultas.css' %}">
-{% endblock head %}
-
 {% block title %}
-   Minha Agenda | {{ block.super }}
-{% endblock %}
+    {{ block.super }} | Minha Agenda
+{% endblock %}       
 
-{% block content %}
+{% block head %}
+    <link rel="stylesheet" href="{% static 'css/dashboard/base_dash.css' %}" media="screen" />
+    <link rel="stylesheet" href="{% static 'css/medico/perfil/minha_agenda.css' %}">
+{% endblock head %} 
 
-<section>
+{% block botoes %}
+<section class="section_minha_agenda">
+    {% block profile-title %}
+        <h1 class="titulo">CONSULTAS FUTURAS</h1>
+    {% endblock profile-title %}
+    
+    {% block accounts_container %}
+    {% endblock accounts_container %}
 
-    <div class="container_title">
-        <h1 class="subtitle">CONSULTAS FUTURAS</h1>
-        <div>
-            <form method="GET">
-                <input type="date" name="data_consulta">
-                <button type="submit">FILTRAR</button>
-            </form>
-        </div>
-    </div>
+    <div class="container_filter">
+        <form method="GET">
+            <input type="date" name="data_consulta">
+            <button type="submit">FILTRAR</button>
+        </form>
+    </div> 
 
     <div class="container_consultas">
         {% if user.is_staff or user.is_superuser %}
@@ -54,4 +57,4 @@
 
 </section>
 
-{% endblock content %}
+{% endblock botoes %}
