--- a/medicos/templates/medicos/perfil.html
+++ b/medicos/templates/medicos/perfil.html
@@ -2,6 +2,37 @@
 
 {% load static %}
 
+{% block header %}
+<div class="nav navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a href="{% url 'home'%}" class="navbar-brand"><img src="{% static "img/logo/logo-vision-dark.svg" %}" class="logo" alt=""></a>
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <nav class="navbar-collapse collapse" id="navbar-main">
+        <ul class="nav navbar-nav">
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'accounts:index' %}">Minha Conta</a></li>
+            <li><a href="#" id="button-back" onclick="history.back()">Voltar</a></li>
+            <form method="post" action="{% url 'accounts:logout' %}" class="navbar-form">
+              {% csrf_token %} 
+              <li><button type="submit" class="custom_btn_logout">Sair</button></li>
+            </form>
+            {% else %}
+            <li><a href="{% url 'accounts:login' %}">Login</a></li>
+          {% endif %}
+        </ul>
+      </nav>
+    </div>
+  </div>
+{% endblock header %}
+
+{% block img %}<img src="{% static 'img/dashboard/perfil_icon/icone_03.png' %}" alt="ícone perfil">{% endblock img %}
+
 {% block botoes %}
 <section class="right_menu">
   {% block profile-title %}
@@ -42,7 +73,7 @@
           </div>
           
           <div class="btn_main">
-              <a href="{% url 'medicos:medicos_lista'%}">
+              <a href="{% url 'medicos:listar_consultas'%}">
                   <img src="{% static 'img/dashboard/icone_agenda.png' %}" alt="ícone perfil funcionário">
                   <h2>minha agenda</h2>
               </a> 
