--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -41,7 +41,7 @@
             <div class="btn_main">
                 <a href="{% url 'medicos:agenda_lista'%}">
                     <img id="centralize" src="{% static 'img/dashboard/icone_agenda.png' %}" alt="ícone ilustrativo agendamento">
-                    <h2>consultar<br>agendamentos</h2>
+                    <h2>horários<br>disponíveis</h2>
                 </a>
             </div>
             
